# folio

./: .gitignore  404.html  _config.yml  feed.xml  index.html  package-lock.json  pyproject.toml  robots.txt  sitemap.xml
_bibliography/: papers.bib
_data/: citations.yml  coauthors.yml  cv.yml  repositories.yml  socials.yml  venues.yml
_includes/: audio.html  figure.html  footer.liquid  head.html  header.liquid  metadata.html  metadata.liquid  news.html  news.liquid  projects.html  projects_horizontal.html  related_posts.html  selected_papers.liquid
_layouts/: about.html  bib.liquid  distill.html  post.html
_news/: 2022-06-01-ceeri.md  2022-06-01-skan.md  2023-06-01-dfs.md  2023-07-01-saidl.md  2023-08-15-cte_inst.md  2023-12-10-aaai.md  2024-01-01-HMS.md  2024-01-20-mltaship.md  2024-04-21-competition.md  2024-05-27-sprinklr.md  2024-06-21-yale.md  2024-12-01-standard-industries.md  2025-01-01-deepretro-nature.md  2025-01-15-chemberta3.md  2025-05-01-gsoc-mentor.md  2025-06-01-icml.md  2025-08-01-mstack.md  2026-01-01-chemberta3.md  2026-01-01-deepretro-nature.md  2026-05-01-retrospect.md  2026-05-15-hires.md
_pages/: about.md  about_einstein.md  blog.md  cv.md  projects.md  publications.md  repositories.md  teaching.md
_posts/: 2023-12-04-principles-of-language.md
_projects/: 1_privacy_guard.md  1_project.md  2_bhashabridge.md  3_patra.md  4_metamorph.md
_sass/: _folio-custom.scss  _themes.scss
_teaching/: 1_teaching.md
assets/css/: main.css  (+5 more)
blog/: index.html
cv/: index.html
news/: index.html
projects/: index.html
publications/: index.html
(+57 files in other folders)
